--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
 
     <!--Shared Preference Keys -->
     <string name="preference_fact_type_key">fact_type_pref</string>
+<!--    <string name="default_web_client_id" translatable="false">webClientId.apps.googleusercontent.com</string>-->
 </resources>
